# WebuiTestAutomation

./: .gitignore  README.md  pyproject.toml
src/webuitestautomation/: sample.py  sample2.py
tests/: conftest.py  test_dashboard.py  test_incidents.py  test_look_user_table.py  test_page.py
